--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
-.classpath
-.project
-.settings
 *.class
-./metadata
-logs/
-target/
-.DS_Store
+
+# Package Files #
+*.jar
+*.war
+
+# gwt caches and compiled units #
+war/gwt_bree/
+gwt-unitCache/
+
+# boilerplate generated classes #
+.apt_generated/
+
+# more caches and things from deploy #
+war/WEB-INF/deploy/
+war/WEB-INF/classes/
+
